# metrics_collector

./: Dockerfile  README.md  cli.py  pyproject.toml
.github/workflows/: docker_build.yml  package-build.yml
metrics_collector/: cli.py  prsync
