[tool.poetry]
name = "metrics_collector"
version = "0.1.0"
description = "Metrics collector driver for network and application monitoring and management."
authors = [
    "bublyapplejuice2 <hello@helloworld.com>",
]
readme = "README.md"
repository = "https://github.com/bublyapplejuice2/metrics_collector"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cmd2 = "2.4.3"
black = "^24"
isort = "^5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"