[tool.poetry]
name = "metrics-collector"
version = "0.1.0"
description = ""
authors = ["bublyapplejuice2 <redact@cornell.edu>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
cmd2 = "2.4.3"
black = "^24"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"