[project]
name = "metrics-collector"
version = "0.1.0"
description = "Server manager using cmd2"
requires-python = ">=3.11"
dependencies = [
	"cmd2==2.4.3",
]

[project.scripts]
metrics-collector = "metrics_collector.cli:main"

[dependency-groups]
dev = [
	"black>=24",
	"isort>=5.13.2",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"